# sandbox

./: CMakeLists.txt
src/: main.c
src/data/: globals.h  pixels_data.h  types.h
src/element/: element.c  element.h
src/event/: event.c  event.h
src/input/: mouse.c  mouse.h
src/list/: list.c  list.h
src/macro/: macro.c  macro.h
src/render/: render.c  render.h
